@@ -141,7 +141,6 @@ private:
 	CString m_sMask;   /*< File mask (if defined) "*.cpp *.h" etc */
 	BOOL m_bUseMask;   /*< If TRUE file mask is used, filter otherwise */
 	CString m_sGlobalFilterPath;    /*< Path for shared filters */
-	CString m_sUserProfilePath;     /*< Path for user's profile folder */
 	CString m_sUserSelFilterPath;     /*< Path for user's private filters */
 
 	CRegExp m_rgx;     /*< Compiled file mask regular expression */
